A patch for the calculation of difficulty levels, and more clear display for the user statistics. Updated README.md for more detailed description.